--- a/Lightkurve.ipynb
+++ b/Lightkurve.ipynb
@@ -203,7 +203,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.2 64-bit",
+   "display_name": "Python 3.10.6 ('WindowsVenv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -217,12 +217,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "d43214ccf5bcbd49566b5b0af6c057527a7a80b1f032a100719213868142b348"
    }
   }
  },
